# wicd

./: .gitignore  NEWS  README.rst  setup.cfg  setup.py
cli/: wicd-cli.py
curses/: configscript_curses.py  netentry_curses.py  wicd-curses.py
data/acpi/: 50-wicd-suspend.sh  80-wicd-connect.sh
data/init/arch/: wicd
data/init/debian/: wicd
data/init/gentoo/: wicd
data/init/pld/: wicd
data/init/redhat/: wicd
data/init/slackware/: rc.wicd
data/init/suse/: wicd
data/logrotate/: wicd.logrotate
data/pmutils/: 55wicd
gtk/: configscript.py  gui.py  guiutil.py  netentry.py  prefs.py  wicd-client.py
in/: init=gentoo=wicd.in  wicd=wpath.py.in
other/: wicd-tray.desktop
tests/: testmisc.py  testwnettools.py
wicd/: __init__.py  autoconnect.py  backend.py  config.py  configmanager.py  dbusmanager.py  logfile.py  misc.py  monitor.py  networking.py  suspend.py  translations.py  wicd-daemon.py  wicd_cli.py  wicd_daemon.py  wnettools.py
wicd/backends/: __init__.py  be-external.py  be_ioctl.py
wicd/curses/: configscript_curses.py  curses_misc.py  netentry_curses.py  prefs_curses.py  wicd_curses.py
