[metadata]
name = wicd
summary = A wireless and wired network manager
description-file =
    README.rst
author =
    Tom Van Braeckel
    Adam Blackburn
    Dan O'Reilly
    Andrew Psaltis
    David Paleino
    Roman Dobosz
author-email =
    tomvanbraeckel@gmail.com
    compwiz18@gmail.com
    oreilldf@gmail.com
    ampsaltis@gmail.com
    d.paleino@gmail.com
    gryf73@gmail.com
home-page = https://gihtub.com/gryf/wicd
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Console :: Curses
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Networking

[options]
packages =
    wicd
    wicd/curses
    wicd/backends

[options.entry_points]
console_scripts =
    wicd=wicd.wicd_daemon:main
    wicd-cli=wicd.wicd_cli:main
    wicd-curses=wicd.curses.wicd_curses:main

[install]
record = install.log

[bdist_rpm]
group = Productivity/Networking/System
